--- a/teaching.html
+++ b/teaching.html
@@ -19,8 +19,8 @@
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
 <div class="menu-item"><a href="COIN\home.html">COIN-Lab</a></div>
-<div class="menu-item"><a href="teaching.html" class="current">Teaching</a></div>
-<div class="menu-category">Miscellany</div>
+<div class="menu-category">Teaching</div>
+<div class="menu-item"><a href="teaching.html" class="current">Modules</a></div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
 </td>
@@ -70,7 +70,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 12:12:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 10:42:22 GMT Daylight Time.
 </div>
 </div>
 </td>
