--- a/team.html
+++ b/team.html
@@ -18,9 +18,9 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="team.html" class="current">Team&nbsp;and&nbsp;Openings</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-category">Miscellany</div>
+<div class="menu-item"><a href="COIN\home.html">COIN-Lab</a></div>
+<div class="menu-category">Teaching</div>
+<div class="menu-item"><a href="teaching.html">Modules</a></div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
 </td>
@@ -171,7 +171,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 10:15:26 GMT Daylight Time.
+Page generated 2023-05-06 10:54:44 GMT Daylight Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
