--- a/dataset.html
+++ b/dataset.html
@@ -19,8 +19,8 @@
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
 <div class="menu-item"><a href="COIN\home.html">COIN-Lab</a></div>
-<div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-category">Miscellany</div>
+<div class="menu-category">Teaching</div>
+<div class="menu-item"><a href="teaching.html">Modules</a></div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html" class="current">Datasets</a></div>
 </td>
@@ -42,7 +42,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 12:12:30 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:02:24 GMT Daylight Time.
 </div>
 </div>
 </td>
