--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -12,19 +12,19 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html">Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
-<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="../publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
-<div class="menu-category">Contact</div>
-<div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
+<div class="menu-category">Openings</div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
-<div id="subtitle"><a href="https://phamqv.github.io/">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
+<div id="subtitle"><a href="../index.html">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
 </div>
 <p><div id="Current Grants"></p>
 <h2>Current Grants</h2>
@@ -34,12 +34,43 @@ Principal Investigator. Project EC20231518 <br />
 Title: &ldquo;Generalized Knowledge Abstraction for Data Reconstruction and Lifelong Learning&rdquo;</p>
 </li>
 </ul>
+<ul>
+<li><p><b>FDCRGP Grant</b> ($136,000), Jan. 2022 - Dec. 2024 <br />
+Co-Principal Investigator. Grant No. 11022021FD2925 <br /> 
+Title: &ldquo;Edge-assisted Activity Recognition using Skeletal Representation and Deep Learning for Video Surveillance&rdquo;</p>
+</li>
+</ul>
 <p></div></p>
 <p><div id="Past Grants"></p>
 <h2>Past Grants</h2>
+<ul>
+<li><p><b>NRF Basic Science and Research</b> (500,000,000 KRW), Feb. 2019 - Feb. 2024 <br /> 
+Principal Investigator. Grant NRF-2019R1C1C1006143 <br /> 
+Title: &ldquo;Privacy Enhancing Connected Cars in 5G and Beyond&rdquo;</p>
+</li>
+</ul>
+<ul>
+<li><p><b>NRF Basic Science and Research</b> (100,000,000 KRW/year, up to 5 years), Feb. 2019 - Feb. 2022 <br /> 
+Key Participant. Grant NRF-2019R1I1A3A01060518 <br /> 
+Title: &ldquo;Edge Computing as an Aide in the 5G Ecosystem: Joint 4C Framework and Its Applications&rdquo;</p>
+</li>
+</ul>
+<ul>
+<li><p><b>NRF Korea-Australia Research Promotion</b> (25,000,000 KRW/year, 2018-2019) <br /> 
+Key Participant. Grant NRF-2018K2A9A1A01090540 <br />
+Title: &ldquo;Low Overhead Channel Access for 5G Mobile Communications in Large-Scale IoT Networks&rdquo;</p>
+</li>
+</ul>
+<ul>
+<li><p><b>Brain Korea 21 PLUS (BK21 Plus)</b> (549,825,000 KRW/year), Feb. 2021 - Feb. 2023 <br />
+Participant, Korean Southeast Center for the 4th Industrial Revolution Leader Education <br />
+Pusan National University</p>
+</li>
+</ul>
+<p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 12:10:00 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:53:46 GMT Daylight Time.
 </div>
 </div>
 </td>
