--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -12,19 +12,19 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html">Home</a></div>
+<div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
-<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="../publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
-<div class="menu-category">Contact</div>
-<div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
+<div class="menu-category">Openings</div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
-<div id="subtitle"><a href="https://phamqv.github.io/">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
+<div id="subtitle"><a href="../index.html">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
 </div>
 <p><div id="Openings"></p>
 <h2>Openings</h2>
@@ -72,7 +72,7 @@ You will be contacted should further information is needed.
 Do give me a shout if you want to visit our COIN Team or have any questions</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 12:09:56 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:41:19 GMT Daylight Time.
 </div>
 </div>
 </td>
