--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -12,21 +12,21 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html">Home</a></div>
+<div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
-<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="../publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
-<div class="menu-category">Contact</div>
-<div class="menu-item"><a href="contact.html">Contact</a></div>
+<div class="menu-category">Openings</div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
-<div id="subtitle"><a href="https://phamqv.github.io/">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
+<div id="subtitle"><a href="../index.html">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
 </div>
-<p><div id="Principal Investigator"></p>
 <h2>Principal Investigator</h2>
 <p>Dr. Viet Quoc Pham<br /></p>
 <ul>
@@ -37,10 +37,9 @@
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
 </ul>
-<p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 12:10:04 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:34:07 GMT Daylight Time.
 </div>
 </div>
 </td>
