--- a/COIN/index.html
+++ b/COIN/index.html
@@ -12,19 +12,19 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="home.html">Home</a></div>
+<div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
-<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="../publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
-<div class="menu-category">Contact</div>
-<div class="menu-item"><a href="contact.html">Contact</a></div>
+<div class="menu-category">Openings</div>
+<div class="menu-item"><a href="opening.html">Openings</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
-<div id="subtitle"><a href="https://phamqv.github.io/">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
+<div id="subtitle"><a href="../index.html">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
 </div>
 <p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin.</p>
 <p><div id="Research Interests"></p>
@@ -56,7 +56,7 @@
 <p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. Join us and visit us at Trinity College Dublin to realize our ideas and improve emerging IT/wireless services and applications</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-05 12:09:48 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:40:21 GMT Daylight Time.
 </div>
 </div>
 </td>
