--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Home</div>
+<div class="menu-category">About me</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\home.html">COIN-Lab</a></div>
+<div class="menu-item"><a href="COIN\index.html" class="current">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
 <div class="menu-item"><a href="teaching.html">Modules</a></div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
@@ -67,7 +67,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[05/2023] Our workshop proposal entitled &ldquo;Edge Learning over Next-Generation Networks&rdquo; - <a href="https://globecom2023.ieee-globecom.org/">IEEE GLOBECOM 2023</a> got accepted. </p>
 </li>
-<li><p>[04/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Applicants can contact me via email if you want to join my COIN group @TCD.</p>
+<li><p>[04/2023] <a href="COIN\Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Applicants can contact me via email if you want to join my COIN group @TCD.</p>
 </li>
 <li><p>[04/2023] I am invited to serve as track chair for <a href="https://soict.org/">SOICT 2023</a>. Submit your high-quality papers and visit HCM City, Vietnam in Dec. 2023. </p>
 </li>
@@ -130,7 +130,7 @@ Assistant Professor, Ph.D. <br />
 <p>He specializes in applying convex optimization, game theory, and machine learning to analyse and optimize cloud edge computing, wireless networks, and IoT systems. Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, and a co-recipient of an IEEE ATC Best Paper Award in 2022. He is an Editor of the Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:01:30 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:56:03 GMT Daylight Time.
 </div>
 </div>
 </td>
