--- a/ebook.html
+++ b/ebook.html
@@ -11,7 +11,7 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Home</div>
+<div class="menu-category">About me</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
@@ -48,7 +48,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:49:28 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:00:52 GMT Daylight Time.
 </div>
 </div>
 </td>
