--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="../publication.html">Publications</a></div>
+<div class="menu-item"><a href="..\publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
@@ -70,7 +70,7 @@ Pusan National University</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:53:46 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:26 GMT Daylight Time.
 </div>
 </div>
 </td>
