--- a/COIN/index.html
+++ b/COIN/index.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="../publication.html">Publications</a></div>
+<div class="menu-item"><a href="..\publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
@@ -56,7 +56,7 @@
 <p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. Join us and visit us at Trinity College Dublin to realize our ideas and improve emerging IT/wireless services and applications</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:40:21 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:22 GMT Daylight Time.
 </div>
 </div>
 </td>
