--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="../publication.html">Publications</a></div>
+<div class="menu-item"><a href="..\publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
@@ -72,7 +72,7 @@ You will be contacted should further information is needed.
 Do give me a shout if you want to visit our COIN Team or have any questions</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 11:41:19 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:27 GMT Daylight Time.
 </div>
 </div>
 </td>
