--- a/COIN/collaborator.html
+++ b/COIN/collaborator.html
@@ -14,12 +14,13 @@
 <div class="menu-category">COIN-Lab@TCD</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
-<div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
+<div class="menu-item"><a href="collaborator.html" class="current">Collaborators</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="..\publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -87,7 +88,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:24 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:28:38 GMT Daylight Time.
 </div>
 </div>
 </td>
