--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -17,9 +17,10 @@
 <div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="..\publication.html">Publications</a></div>
-<div class="menu-item"><a href="funding.html">Funding</a></div>
+<div class="menu-item"><a href="funding.html" class="current">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -70,7 +71,7 @@ Pusan National University</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:26 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:27:16 GMT Daylight Time.
 </div>
 </div>
 </td>
