--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -19,7 +19,8 @@
 <div class="menu-item"><a href="..\publication.html">Publications</a></div>
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
-<div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="opening.html" class="current">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -69,10 +70,10 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p>Please email Dr. Pham with your resume, motivation letter, scholastic transcripts, and publications (if available). 
 Apologize for not receiving a confirmed email due to the volume of applications. 
 You will be contacted should further information is needed. 
-Do give me a shout if you want to visit our COIN Team or have any questions</p>
+Do give me a shout if you want to visit our COIN Team or have any questions.</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:27 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:27:18 GMT Daylight Time.
 </div>
 </div>
 </td>
