--- a/COIN/team.html
+++ b/COIN/team.html
@@ -20,6 +20,7 @@
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -80,7 +81,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:23 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:27:09 GMT Daylight Time.
 </div>
 </div>
 </td>
