--- a/COIN/index.html
+++ b/COIN/index.html
@@ -20,6 +20,7 @@
 <div class="menu-item"><a href="funding.html">Funding</a></div>
 <div class="menu-category">Openings</div>
 <div class="menu-item"><a href="opening.html">Openings</a></div>
+<div class="menu-item"><a href="contact.html">Contact</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -56,7 +57,7 @@
 <p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. Join us and visit us at Trinity College Dublin to realize our ideas and improve emerging IT/wireless services and applications</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:14:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:27:01 GMT Daylight Time.
 </div>
 </div>
 </td>
