--- a/COIN/collaborator.html
+++ b/COIN/collaborator.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="home.html">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-item"><a href="collaborator.html" class="current">Collaborators</a></div>
 <div class="menu-category">Research</div>
@@ -88,7 +88,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:28:38 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:44:00 GMT Daylight Time.
 </div>
 </div>
 </td>
