--- a/COIN/home.html
+++ b/COIN/home.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="index.html" class="current">Home</a></div>
+<div class="menu-item"><a href="home.html" class="current">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
@@ -54,10 +54,11 @@
 <p></div></p>
 <p><div id="About COIN"></p>
 <h2>About COIN</h2>
-<p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. Join us and visit us at Trinity College Dublin to realize our ideas and improve emerging IT/wireless services and applications</p>
+<p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. Join us and visit us at Trinity College Dublin to realize our ideas and improve emerging IT/wireless services and applications.</p>
+<p><div id="About COIN"></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:27:01 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:45:17 GMT Daylight Time.
 </div>
 </div>
 </td>
