--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">COIN-Lab@TCD</div>
-<div class="menu-item"><a href="index.html">Home</a></div>
+<div class="menu-item"><a href="home.html">Home</a></div>
 <div class="menu-item"><a href="team.html">Team&nbsp;Members</a></div>
 <div class="menu-item"><a href="collaborator.html">Collaborators</a></div>
 <div class="menu-category">Research</div>
@@ -73,7 +73,7 @@ You will be contacted should further information is needed.
 Do give me a shout if you want to visit our COIN Team or have any questions.</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:27:18 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:44:02 GMT Daylight Time.
 </div>
 </div>
 </td>
