--- a/grantaward.html
+++ b/grantaward.html
@@ -18,9 +18,9 @@
 <div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html" class="current">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="COIN\index.html">COIN-Lab@TCD</a></div>
+<div class="menu-item"><a href="COIN\home.html">COIN-Lab@TCD</a></div>
 <div class="menu-category">Teaching</div>
-<div class="menu-item"><a href="teaching.html">Modules</a></div>
+<div class="menu-item"><a href="module.html">Modules</a></div>
 <div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
 </td>
@@ -91,7 +91,7 @@ Pusan National University</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 12:11:57 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:38:27 GMT Daylight Time.
 </div>
 </div>
 </td>
