--- a/COIN/home.html
+++ b/COIN/home.html
@@ -25,7 +25,6 @@
 <td id="layout-content">
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
-<div id="subtitle"><a href="../index.html">Professor Viet Quoc Pham</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a></div>
 </div>
 <p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin.</p>
 <p><div id="Research Interests"></p>
@@ -54,11 +53,11 @@
 <p></div></p>
 <p><div id="About COIN"></p>
 <h2>About COIN</h2>
-<p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. Join us and visit us at Trinity College Dublin to realize our ideas and improve emerging IT/wireless services and applications.</p>
+<p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. COIN-Lab is led by <a href="../index.html">Professor Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. Join and visit COIN-Lab@TCD to realize our ideas and improve emerging IT/wireless services and applications.</p>
 <p><div id="About COIN"></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:45:17 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:59:46 GMT Daylight Time.
 </div>
 </div>
 </td>
