--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Assistant Professor, Ph.D. <br />
 </ul>
 </td></tr></table>
 <p><div id="Research Interests"></p>
-<h2>Research Interests (COIN)</h2>
+<h2>Research Interests</h2>
 <ul>
 <li><p><b>COmputing</b>: cloud edge computing, aerial computing, edge of things, and edge AI.</p>
 </li>
@@ -131,7 +131,7 @@ Assistant Professor, Ph.D. <br />
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:38:20 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:52:52 GMT Daylight Time.
 </div>
 </div>
 </td>
