--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -26,6 +26,7 @@
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
 </div>
+<p>Pleas feel free to email or drop by office for contacting <a href="../index.html">Dr. Viet Pham</a>. You may consider a call to fix an appointment.</p>
 <p><div id="Principal Investigator"></p>
 <h2>Principal Investigator</h2>
 <p>Dr. Viet Quoc Pham<br /></p>
@@ -40,7 +41,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:58:30 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:21:46 GMT Daylight Time.
 </div>
 </div>
 </td>
