--- a/COIN/home.html
+++ b/COIN/home.html
@@ -26,7 +26,7 @@
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
 </div>
-<p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin.</p>
+<p>Welcome to COIN-Lab, School of Computer Science and Statistics, Trinity College, the University of Dublin. <a href="opening.html">Various positions</a> are available to join COIN-Lab@TCD. Please check, contact, and join us.</p>
 <p><div id="Research Interests"></p>
 <h2>Research Interests (COIN)</h2>
 <ul>
@@ -41,23 +41,25 @@
 <p><div id="News"></p>
 <h2>News</h2>
 <ul>
-<li><p>[05/2023] Dr. Pham got the Enterprise Ireland Coordination Support Award. </p>
+<li><p>[05/2023] Dr. Viet Pham got the Enterprise Ireland Coordination Support Award. </p>
 </li>
 <li><p>[04/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Please apply and join our COIN research group.</p>
 </li>
-<li><p>[01/2023] Dr. Pham joined <a href="https://connectcentre.ie/">SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a> as a TCD supervisor.</p>
+<li><p>[01/2023] Dr. Viet Pham joined <a href="https://connectcentre.ie/">SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a> as a TCD supervisor.</p>
 </li>
-<li><p>[01/2023] Dr. Pham started his position of assistant professor with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
+<li><p>[01/2023] Dr. Viet Pham started his position of assistant professor with the <a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a>, <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
 </li>
 </ul>
 <p></div></p>
 <p><div id="About COIN"></p>
 <h2>About COIN</h2>
-<p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. COIN-Lab is led by <a href="../index.html">Professor Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. Join and visit COIN-Lab@TCD to realize our ideas and improve emerging IT/wireless services and applications.</p>
+<p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. 
+COIN-Lab is led by <a href="../index.html">Professor Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. 
+Join and visit COIN-Lab@TCD to realize our ideas and improve emerging IT/wireless services and applications.</p>
 <p><div id="About COIN"></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:59:46 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:25:31 GMT Daylight Time.
 </div>
 </div>
 </td>
