--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -26,6 +26,11 @@
 <div id="toptitle">
 <h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
 </div>
+<p><b>Prospective Students</b>:
+Please email Dr. Pham with your resume, motivation letter, scholastic transcripts, and publications (if available). 
+Apologize for not receiving a confirmed email due to the volume of applications. 
+You will be contacted should further information is needed. 
+Do give a shout if you want to visit our COIN Team or have any questions.</p>
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
@@ -64,15 +69,9 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 </li>
 </ul>
 <p></div></p>
-<p><div id="Prospective Students"></p>
-<h2>Prospective Students</h2>
-<p>Please email Dr. Pham with your resume, motivation letter, scholastic transcripts, and publications (if available). 
-Apologize for not receiving a confirmed email due to the volume of applications. 
-You will be contacted should further information is needed. 
-Do give me a shout if you want to visit our COIN Team or have any questions.</p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:58:28 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:19:38 GMT Daylight Time.
 </div>
 </div>
 </td>
