--- a/COIN/collaborator.html
+++ b/COIN/collaborator.html
@@ -24,7 +24,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
+<h1>COIN - Collaborators and Scholars</h1>
 </div>
 <p><div id="Collaborators"></p>
 <h2>Collaborators</h2>
@@ -87,7 +87,7 @@
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:58:23 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 09:45:33 GMT Daylight Time.
 </div>
 </div>
 </td>
