--- a/COIN/contact.html
+++ b/COIN/contact.html
@@ -24,24 +24,26 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
+<h1>COIN - Contact Details</h1>
 </div>
-<p>Pleas feel free to email or drop by office for contacting <a href="../index.html">Dr. Viet Pham</a>. You may consider a call to fix an appointment.</p>
+<p>Pleas feel free to email or drop by office for contacting Dr. Pham. You may consider a call to fix an appointment.</p>
 <p><div id="Principal Investigator"></p>
 <h2>Principal Investigator</h2>
-<p>Dr. Viet Quoc Pham<br /></p>
 <ul>
+<li><p><a href="../index.html">Dr. Viet Quoc Pham</a></p>
+</li>
 <li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a></p>
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
-<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
-</li>
 </ul>
 <p></div></p>
+<h2>At Work</h2>
+<p>You can find Dr. Pham at his office located at 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland.</p>
+<p><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2382.0672715060036!2d-6.252936923319985!3d53.34205197228804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e90e0c600cf%3A0x9ad142d3ea06fd2!2sCONNECT%20Centre%2C%20Trinity%20College%20Dublin%2C%20the%20University%20of%20Dublin!5e0!3m2!1sen!2sie!4v1683449335645!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:21:46 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 10:05:11 GMT Daylight Time.
 </div>
 </div>
 </td>
