--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -24,7 +24,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
+<h1>COIN - Research Grants</h1>
 </div>
 <p><div id="Current Grants"></p>
 <h2>Current Grants</h2>
@@ -70,7 +70,7 @@ Pusan National University</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 14:58:25 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 10:06:06 GMT Daylight Time.
 </div>
 </div>
 </td>
