--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -24,7 +24,7 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
+<h1>COIN - Openings</h1>
 </div>
 <p><b>Prospective Students</b>:
 Please email Dr. Pham with your resume, motivation letter, scholastic transcripts, and publications (if available). 
@@ -71,7 +71,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:19:38 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 09:46:10 GMT Daylight Time.
 </div>
 </div>
 </td>
