--- a/COIN/team.html
+++ b/COIN/team.html
@@ -24,63 +24,161 @@
 </td>
 <td id="layout-content">
 <div id="toptitle">
-<h1>COIN - COmputing, Intelligence, and Networking Laboratory</h1>
+<h1>COIN - Lab Members</h1>
 </div>
 <p><div id="Principal Investigator"></p>
 <h2>Principal Investigator</h2>
-<p>Dr. Viet Quoc Pham<br /></p>
 <ul>
+<li><p>Viet Quoc Pham, Ph.D.<br /></p>
+</li>
 <li><p>E-mail: <a href="mailto:viet.pham@tcd.ie">viet.pham@tcd.ie</a></p>
 </li>
 <li><p>Phone: (+353) 083-475-5354</p>
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
+<li><p><a href="Misc\Curriculum_Vitae_PHAM.pdf">Curriculum Vitae</a>, 
+<a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, 
+<a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>, 
+<a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, 
+<a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, 
+<a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, 
+and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>. </p>
+</li>
 </ul>
 <p></div></p>
 <p><div id="Students"></p>
 <h2>Students</h2>
 <ul>
-<li><p>Thai-Hoc Vu [PhD, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03-Present]: Performance analysis of 6G short-packet communications (co-supervised with <a href="mailto:sungkim@ulsan.ac.kr">Prof. Sunghwan Kim</a>)</p>
+<li><p>Thai-Hoc Vu </p>
+<ul>
+<li><p>PhD Student, <a href="https://global.ulsan.ac.kr/en/Main.do">University of Ulsan</a>, 2021/03-Present.</p>
 </li>
-<li><p>Le Thi Mai [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present]: Wireless AI and aerial access networks (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Research Topic: Performance analysis of 6G short-packet communications. </p>
 </li>
-<li><p>Swe Swe Latt [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: FL and 6G resource optimization (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Co-supervised with <a href="https://sites.google.com/site/citulsan/">Professor Sunghwan Kim</a>.</p>
+</li></ul>
 </li>
-<li><p>Dao Thien Thanh [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning and depth map (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Le Thi Mai </p>
+<ul>
+<li><p>PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2021/03-Present.</p>
 </li>
-<li><p>Nguyen Minh Duong [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: DRL and FL for 6G IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Research Topic: Wireless AI and aerial access networks.</p>
 </li>
-<li><p>Daeil Noh [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Deep learning for radio signal processing (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>)</p>
+<li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
+</li></ul>
 </li>
-<li><p>Sang Min Lee [PhD, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present]: Communication-efficient FL for massive IoT (co-supervised with <a href="mailto:wjhwang@pusan.ac.kr">Prof. Won-Joo Hwang</a>) </p>
+<li><p>Swe Swe Latt </p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+</li>
+<li><p>Research Topic: FL and 6G resource optimization.</p>
+</li>
+<li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
+</li></ul>
+</li>
+<li><p>Dao Thien Thanh </p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+</li>
+<li><p>Research Topic: Deep learning and depth map.</p>
+</li>
+<li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
+</li></ul>
+</li>
+<li><p>Nguyen Minh Duong </p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+</li>
+<li><p>Research Topic: DRL and FL for 6G IoT.</p>
+</li>
+<li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
+</li></ul>
+</li>
+<li><p>Daeil Noh </p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+</li>
+<li><p>Research Topic: Deep learning for radio signal processing.</p>
+</li>
+<li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>.</p>
+</li></ul>
+</li>
+<li><p>Sang Min Lee </p>
+<ul>
+<li><p>PhD Student, <a href="https://www.pusan.ac.kr/eng/Main.do">Pusan National University</a>, 2020/09-Present.</p>
+</li>
+<li><p>Research Topic: Communication-efficient FL for massive IoT.</p>
+</li>
+<li><p>Co-supervised with <a href="https://wireless-ai.pusan.ac.kr/wireless-ai/index.do">Professor Won-Joo Hwang</a>. </p>
+</li>
+</ul>
+
 </li>
 </ul>
 <p></div></p>
 <p><div id="Alumnus"></p>
 <h2>Alumnus</h2>
 <ul>
-<li><p>Nadia Iradukunda [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08]. Current position: Lecturer, Mount Kenya University, Rwanda</p>
+<li><p>Nadia Iradukunda </p>
+<ul>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/09-2022/08.</p>
 </li>
-<li><p>Le Thi Mai [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02]. Current position: PhD student, Pusan National University, Korea</p>
+<li><p>Current position: Lecturer, Mount Kenya University, Rwanda.</p>
+</li></ul>
 </li>
-<li><p>Vo Ta Hoang [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02]. Current position: Lecturer, Thuyloi University, Vietnam</p>
+<li><p>Le Thi Mai </p>
+<ul>
+<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2019/03-2021/02.</p>
 </li>
-<li><p>Hoang Huu Trung [PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02]. Current position: Lecturer, Hue University, Vietnam</p>
+<li><p>Current position: PhD student, Pusan National University, Korea.</p>
+</li></ul>
 </li>
-<li><p>Nguyen Tien Hoang [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. Current position: QA Project Leader, LG Innotek, Vietnam.</p>
+<li><p>Vo Ta Hoang </p>
+<ul>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2020/02.</p>
 </li>
-<li><p>Maurice Nduwayezu [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. Current position: PhD student, SeoulTech, Korea</p>
+<li><p>Current position: Lecturer, Thuyloi University, Vietnam.</p>
+</li></ul>
 </li>
-<li><p>Girmay Gebremariam Gebrelibanos [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08]. </p>
+<li><p>Hoang Huu Trung </p>
+<ul>
+<li><p>PhD, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2018/09-2021/02.</p>
 </li>
-<li><p>Akmal Azizan bin Md Zin [MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08].</p>
+<li><p>Current position: Lecturer, Hue University, Vietnam</p>
+</li></ul>
+</li>
+<li><p>Nguyen Tien Hoang </p>
+<ul>
+<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08.</p>
+</li>
+<li><p>Current position: QA Project Leader, LG Innotek, Vietnam.</p>
+</li></ul>
+</li>
+<li><p>Maurice Nduwayezu </p>
+<ul>
+<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08.</p>
+</li>
+<li><p>Current position: PhD student, SeoulTech, Korea.</p>
+</li></ul>
+</li>
+<li><p>Girmay Gebremariam Gebrelibanos </p>
+<ul>
+<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08. </p>
+</li></ul>
+</li>
+<li><p>Akmal Azizan bin Md Zin </p>
+<ul>
+<li><p>MS, <a href="https://www.inje.ac.kr/english/">Inje University</a>, 2017/09-2019/08.</p>
+</li>
+</ul>
+
 </li>
 </ul>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 15:25:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-07 09:44:13 GMT Daylight Time.
 </div>
 </div>
 </td>
